44: --add-opens in surefire via profile property
Task-Url: https://github.com/LorenzoBettini/xtext-build-utils/issues/44